# FinanceCPP

./: .gitignore  CMakeLists.txt  Currency.cpp  Currency.h  CurrencyManager.cpp  CurrencyManager.h  Date.cpp  Date.h  Entry.h  EntryManager.cpp  EntryManager.h  FileController.cpp  Main.cpp
private/: Date.cpp  EntryManager.cpp  FileController.cpp  Main.cpp
private/Currency/: Currency.cpp  CurrencyManager.cpp
private/Presenter/: MainPresenter.cpp
private/View/: Sidebar.cpp
private/View/ChartView/: ChartView.cpp
private/View/Components/Menu/: MenuButton.cpp  MenuLabel.cpp
private/View/Entry/: AddEntryView.cpp  EntryView.cpp
private/View/Login/: Login.cpp
private/Window/: MainWindow.cpp  Window.cpp
public/: Date.h  FileController.h
public/Currency/: Currency.h  CurrencyManager.h
public/Entry/: Entry.h  EntryManager.h
public/Presenter/: MainPresenter.h
public/View/: Sidebar.h
public/View/ChartView/: ChartView.h
public/View/Components/Menu/: MenuButton.h  MenuLabel.h
public/View/Entry/: AddEntryView.h  EntryView.h
public/View/Login/: Login.h
public/Window/: MainWindow.h  Window.h
